--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,5 +3,9 @@
 @tailwind utilities;
 
 body {
-    background-color: #F9FAFB;
+  background-color: #f9fafb;
+}
+
+textarea {
+  scrollbar-width: none;
 }
